<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbToolbar_AD"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srRefresh_AD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tbToolbar_AD">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tbToolbar_AD">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/tvBankName_AD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#ffde366f"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvAddress_AD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvBankName_AD"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvPhoneNumber_AD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvAddress_AD"
                                android:textSize="20sp" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_view"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="16dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/card_view"
                            android:layout_alignStart="@+id/card_view"
                            android:layout_below="@+id/card_view"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/info_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/currency_name"
                                style="@style/SubTitleText" />

                            <TextView
                                android:id="@+id/info_text1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:text="@string/ask_bid"
                                style="@style/SubTitleText" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view4"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_below="@+id/card_view2"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp">

                        <ListView
                            android:id="@+id/lvMain"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </ListView>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

            </ScrollView>

            <FrameLayout
                android:id="@+id/flForFAB_AD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_overlay">

                <com.getbase.floatingactionbutton.FloatingActionsMenu
                    android:id="@+id/fabMenu_AD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    fab:fab_addButtonColorNormal="@color/fab_menu_normal"
                    fab:fab_addButtonColorPressed="@color/fab_menu_normal"
                    fab:fab_labelStyle="@style/MenuLabelsStyle">

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabMap_AD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fab_map"
                        fab:fab_colorNormal="@color/fab_normal"
                        fab:fab_colorPressed="@color/fab_pressed"
                        fab:fab_size="mini"
                        fab:fab_title="@string/action_open_map" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabSite_AD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fab_link"
                        fab:fab_colorNormal="@color/fab_normal"
                        fab:fab_colorPressed="@color/fab_pressed"
                        fab:fab_size="mini"
                        fab:fab_title="@string/action_site" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabCall_AD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fab_phone"
                        fab:fab_colorNormal="@color/fab_normal"
                        fab:fab_colorPressed="@color/fab_pressed"

                        fab:fab_size="mini"
                        fab:fab_title="@string/action_dial" />

                </com.getbase.floatingactionbutton.FloatingActionsMenu>
            </FrameLayout>

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
